# CMakeProject1

App/source/: CMakeLists.txt  RunCmake.py  main.cpp
App/source/include/: fullName.h  list.h  log.h  people.h
App/source/src/: fullName.cpp  list.cpp  log.cpp  people.cpp
